--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     },
     "license": "MIT",
     "screenshots": {
-        "desktop": "assets/screenshot-desktop.jpg",
-        "mobile": "assets/screenshot-mobile.jpg"
+        "desktop": "assets/screenshot-desktop.png",
+        "mobile": "assets/screenshot-mobile.png"
     },
     "author": {
         "name": "P.J. Onori",
@@ -29,8 +29,8 @@
     ],
     "repository": {
         "type": "git",
-        "url": ""
+        "url": "https://github.com/somerandomdude/boo"
     },
-    "bugs": "",
-    "contributors": ""
+    "bugs": "https://github.com/somerandomdude/boo/issues",
+    "contributors": "https://github.com/somerandomdude/boo/graphs/contributors"
 }
